--- a/app.json
+++ b/app.json
@@ -1,1 +1,51 @@
-
+{
+  "name": "MT-Force-SubsBot",
+  "description": "Telegram's best Foruce Subscribe Bot",
+  "keywords": [
+    "Telegram",
+    "Best",
+    "MT Force SubsBot"
+  ],
+  "success_url": "https://t.me/MT_ForceSubsBot",
+  "website": "https://github.com/MRK-YT/",
+  "repository": "https://github.com/MRK-YT/MT-Force-SubsBot",
+  "env": {
+    "BOT_TOKEN": {
+      "description": "Your bot token, as a string.",
+      "value": ""
+    },
+    "MO_TECH_YT": {
+      "description": "✔️Created MRK.YT",
+      "value": "False"
+    },
+    "APP_ID": {
+      "description": "Get this value from https://my.telegram.org",
+      "value": ""
+    },
+    "API_HASH": {
+      "description": "Get this value from https://my.telegram.org",
+      "value": ""
+    },
+    "SUDO_USERS": {
+      "description": "allow only pre-defined users to use this bot",
+      "value": "809546777"
+    }
+  },
+  "addons": [
+    {
+    "plan": "heroku-postgresql",
+      "options": {
+        "version": "12"
+      }
+    }
+  ],
+  "buildpacks": [{
+    "url": "heroku/python"
+  }],
+  "formation": {
+    "worker": {
+      "quantity": 1,
+      "size": "free"
+    }
+  }
+}
