--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
       "description": "Your bot token, as a string.",
       "value": ""
     },
-    "MO_TECH_YT": {
+    "EVN": {
       "description": "✔️Created MRK.YT",
       "value": "False"
     },
