--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "MT Force Subs Bot",
   "description": "Telegram's best Foruce Subscribe Bot",
+  "logo": "https://telegra.ph/file/9e831d15da94deb56ef4c.jpg",
   "keywords": [
     "Telegram",
     "Best",
